--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,9 +1,9 @@
 # Makefile for Sphinx documentation
 #
 
+export PYTHONPATH = $PYTHONPATH:..
 
-
-# You can set these variables from the command line.
+ #You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
